--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8282
 eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=false
+eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:6767/eureka
 spring.application.name=order-service
