--- a/orderservice/src/main/resources/application.properties
+++ b/orderservice/src/main/resources/application.properties
@@ -3,3 +3,8 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:6767/eureka
 spring.application.name=order-service
+feign.client.default.connectTimeout=10000
+feign.client.default.readTimeout=10000
+
+feign.hystrix.enabled=true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
